# sawtooth-poet

./: .gitignore  BUILD.md  CONTRIBUTING.md  Jenkinsfile  build_sgx_binary.sh  docker-compose-installed.yaml  docker-compose-sgx-hw.yaml  docker-compose.yaml  poet2-sgx-engine.dockerfile
cli/: Cargo.toml
cli/src/: cli_error.rs  main.rs  registration.rs
cli/src/enclave/: enclave_error.rs  enclave_service.rs  zmq_enclave_service.rs
common/: Cargo.toml
common/src/: lib.rs  protos.rs  utils.rs
common/src/messaging/: mod.rs  stream.rs  zmq_stream.rs
common/src/sgx_structs/: mod.rs  sgx_attributes.rs  sgx_basename.rs  sgx_cpu_svn.rs  sgx_measurement.rs  sgx_quote.rs  sgx_report_body.rs  sgx_report_data.rs  sgx_struct_error.rs  sgx_struct_serde.rs
core/: Cargo.toml  Dockerfile  Dockerfile-installed  build.rs
core/src/: enclave_sgx.rs  main.rs  poet2_util.rs  poet_config.rs  registration.rs  service.rs  validator_registry_view.rs
core/src/database/: mod.rs
core/src/enclave/: enclave_error.rs  enclave_service.rs  mod.rs  zmq_enclave_service.rs
core/src/engine/: check_consensus.rs  consensus_state.rs  consensus_state_store.rs  fork_resolver.rs  mod.rs
core/src/resources/: poet_config.toml
docker/: clippy.dockerfile  lint.dockerfile  rust-installed.dockerfile
docker/compose/: docker-compose-3-nodes.yaml  docker-compose-5-nodes.yaml  docker-compose-sgx-hw.yaml  docker-poet-build.yaml  fix-rustfmt.yaml
families/sawtooth_validator_registry/validator_registry/: build.rs
ias_client/src/: client_utils.rs  ias_client.rs  ias_client_sim.rs  lib.rs
ias_proxy/src/: ias_proxy_server.rs
protos/: enclave.proto
sgx/rust_sgxffi/src/: ffi.rs
src/core/: Cargo.toml
src/core/src/: main.rs  (+4 more)
src/sgx/: CMakeLists.txt
(+12 files in other folders)
