# Copyright 2019 Intel Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ------------------------------------------------------------------------------

[package]
name = "sawtooth-poet-cli"
version = "0.1.0"
authors = ["Intel Corporation"]
description = "CLI for the Sawtooth PoET2 consensus algorithm"

[dependencies]
sawtooth-sdk = "^0.2"
rand = "0.4.2"
log = "0.4.5"
log4rs = "0.8.1"
protobuf="2.0"
sawtooth-zmq = "0.8.2-dev5"
num = "0.1.42"
lazy_static = "1.0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
clap = "~2.27.0"
lmdb-zero = ">=0.4.1"
rust-crypto = "^0.2"
bincode = "1.0.1"
common = { path = "../common" }
ias_client = { path = "../ias_client" }
hyper = "0.12.11"
tokio-core = "0.1.17"
toml = "0.4.8"
openssl = "0.10.15"
base64 = "0.10.0"
hex = "0.3.2"

[build-dependencies]
protoc-rust = "2.0"
glob = "0.2"

[package.metadata.deb]
maintainer = "sawtooth"
depends = "$auto,rsyslog"
assets = [
    ["src/resources/poet_config.toml", "/etc/sawtooth/poet_config.toml", "644"],
    ["target/release/sawtooth-poet-cli", "/usr/bin/sawtooth-poet-cli", "755"],
]
maintainer-scripts = "../packaging/ubuntu"
